[gd_scene load_steps=5 format=3 uid="uid://bfqnj4phlfd22"]

[ext_resource type="PackedScene" uid="uid://b0vw4sftvguae" path="res://Scenes/Base Scenes/MainMenuScreenBase.tscn" id="1_yq0bx"]
[ext_resource type="Script" uid="uid://v4rqo37vnyle" path="res://Scripts/MainMenu/SettingsScreen.gd" id="2_lf3cr"]
[ext_resource type="FontFile" uid="uid://b2lwqd3u504hn" path="res://Assets/Fonts/BigSpace-rPKx.ttf" id="3_0j17m"]

[sub_resource type="LabelSettings" id="LabelSettings_jbh1s"]
font = ExtResource("3_0j17m")
font_size = 30
font_color = Color(0, 0, 0, 1)

[node name="SettingsScreen" instance=ExtResource("1_yq0bx")]
script = ExtResource("2_lf3cr")

[node name="VBoxContainer" type="VBoxContainer" parent="." index="2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 131.0
offset_top = -39.0
offset_right = -148.126
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Music: "
label_settings = SubResource("LabelSettings_jbh1s")
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -40.0
max_value = 20.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "SFX: "
label_settings = SubResource("LabelSettings_jbh1s")
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2" index="1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -40.0
max_value = 20.0

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/HBoxContainer2/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
